Changes on docs api form source -swagger:meta tag moved from docs.go into app.go -removed docs.go -user's status changed into capital letter -added swagger:route in activateAccount handler
