# api/app.go
@@ -1,3 +1,28 @@
+// Package classification Shorkeun API.
+// Documentation for Shorkeun API.
+// Why do we need to shorten the URL? Is it something necessary?
+// Well, there are many advantages that shortening of URL provides.
+// A very basic advantage could be that users tend to make very few mistakes while copying the URL if it is not shortened.
+// Secondly, they surely save a lot of space when used or printed.
+// Moreover, it could be used if someone wishes not to use the original URL or want to hide the original one.
+// Terms Of Service:
+// There are no TOS at this moment, use at your own risk we take no responsibility
+// 	Schemes: http, https
+//     Host: localhost
+//     BasePath: /
+//     Version: 1.0.0
+//     License: MIT http://opensource.org/licenses/MIT
+//     Contact: Ilham Tubagus Arfian<ilhamta27@gmail.com> https://github.com/ilhamtubagus
+//     Consumes:
+//     - application/json
+// 		Produces:
+//     - application/json
+//     SecurityDefinitions:
+//     Bearer-Token:
+//          type: apiKey
+//          name: Authorization
+//          in: header
+// swagger:meta
 package api
 
 import (
@@ -22,6 +47,7 @@ func StartApp(e *echo.Echo) {
 
 	//handlers instantiation
 	authHandler := handlers.NewAuthHandler(userRepository)
+	userHandler := handlers.NewUserHandler(userRepository)
 
 	//routes definition
 	e.GET("", func(c echo.Context) error {
@@ -35,8 +61,11 @@ func StartApp(e *echo.Echo) {
 	redocMiddleware := middleware.Redoc(opts, nil)
 	eRedocMiddleware := echo.WrapHandler(redocMiddleware)
 	e.GET("/docs", eRedocMiddleware)
+	// auth routes
 	e.POST("/auth/signin", authHandler.SignIn)
 	e.POST("/auth/signin/google", authHandler.GoogleSignIn)
 	e.PATCH("/auth/signin/activation-code", authHandler.RequestActivationCode)
 	e.POST("/auth/register", authHandler.Register)
+	// user routes
+	e.PATCH("/user/status", userHandler.ActivateAccount)
 }
